--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 
 
 <body>
-    <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////////////
-    //////////////////////////////////////////        START OF NAVBAR        ////////////////////////////////////////
-    ///////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
+    <!-- ///////////////////////////////////////////////////////////////
+    ////////////////        START OF NAVBAR        /////////////////////
+    /////////////////////////////////////////////////////////////////-->
     
     <div class="navbar">
         <ul id='nav-ul'>
@@ -38,27 +38,31 @@
             <li><a href='#'>NEW PATIENTS</a></li>
             <li><a href='#'>PATIENT EDUCATION</a></li>
             <li><a class="libraryHover" href='#'>PATIENT LIBRARY</a></li>
-                <ul class='libraryOptions option1'>
-                    <li><a href='#'>What Is A Podiatrist?</a></li>
-                    <li><a href='#'>When To Call A Doctor?</a></li>
-                    <li><a href='#'>Foot Anatomy</a></li>
-                    <li><a href='#'>Basic Foot Care Guidelines</a></li>
-                    <li><a href='#'>Foot Problems</a></li>
-                        <ul class='footProbOptions option2'>
-                            <li><a href='#'>General Statistics</a></li>
-                            <li><a href='#'>Achilles Problems</a></li>
+            <li><a href='#'>REQUEST APPOINTMENT</a></li>   
+        </ul>
+    </div>
+    <div class="slidesAndMenuDrop">
+        <ul class='libraryOptions LevelOne'>
+                    <li class='libraryOptions'><a href='#'>What Is A Podiatrist?</a></li>
+                    <li class='libraryOptions'><a href='#'>When To Call A Doctor?</a></li>
+                    <li class='libraryOptions'><a href='#'>Foot Anatomy</a></li>
+                    <li class='libraryOptions'><a href='#'>Basic Foot Care Guidelines</a></li>
+                    <li class='libraryOptions'><a href='#'>Foot Problems</a></li>
+                        <ul class='footProbParent'>
+                            <li class='footProbOptions'><a href='#'>General Statistics</a></li>
+                            <li class='footProbOptions'><a href='#'>Achilles Problems</a></li>
                                 <ul class='achillesOptions'>
                                     <li><a href='#'>Achilles Tendonitis</a></li>
                                     <li><a href='#'>Peroneal Tendon Dislocation/ Dysfunction</a></li>
                                     <li><a href='#'>Xanthomas Of The Achilles Tendon</a></li>
                                 </ul>
-                            <li><a href='#'>Ankle Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Ankle Problems</a></li>
                                 <ul class='ankleOptions'>
                                     <li><a href='#'>Achilles Tendonitis</a></li>
                                     <li><a href='#'>Peroneal Tendon Dislocation/ Dysfunction</a></li>
                                     <li><a href='#'>Xanthomas Of The Achilles Tendon</a></li>
                                 </ul>
-                            <li><a href='#'>Arch And Ball Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Arch And Ball Problems</a></li>
                                 <ul class='archBallOptions'>
                                     <li><a href='#'>Capsulitis</a></li>
                                     <li><a href='#'>Flat Feet (Over Pronation)</a></li>
@@ -66,7 +70,7 @@
                                     <li><a href='#'>Plantar Fribromas (Lumps In The Arch Of The Feet)</a></li>
                                     <li><a href='#'>Sensamoiditis</a></li>
                                 </ul>
-                            <li><a href='#'>Common Foot Injuries</a></li>
+                            <li class='footProbOptions'><a href='#'>Common Foot Injuries</a></li>
                                 <ul class='commonOptions'>
                                     <li><a href='#'>Ankle Sprain Injuries</a></li>
                                     <li><a href='#'>Broken Ankle</a></li>
@@ -76,7 +80,7 @@
                                     <li><a href='#'>Shin Splints</a></li>
                                     <li><a href='#'>Sports Injuries</a></li>
                                 </ul>
-                            <li><a href='#'>Deformitis</a></li>
+                            <li class='footProbOptions'><a href='#'>Deformitis</a></li>
                                 <ul class='deformOptions'>
                                     <li><a href='#'>Amniotic Band Syndrome</a></li>
                                     <li><a href='#'>Bunions</a></li>
@@ -102,8 +106,8 @@
                                     <li><a href='#'>Spurs</a></li>
                                     <li><a href='#'>Tarsal Coalition</a></li>
                                 </ul>
-                            <li><a href='#'>Diabetes And Your Feet</a></li>
-                            <li><a href='#'>Disease Of The Foot</a></li>
+                            <li class='footProbOptions'><a href='#'>Diabetes And Your Feet</a></li>
+                            <li class='footProbOptions'><a href='#'>Disease Of The Foot</a></li>
                                 <ul class='diseaseOptions'>
                                     <li><a href='#'>Arthritis</a></li>
                                     <li><a href='#'>Cancer</a></li>
@@ -118,26 +122,26 @@
                                     <li><a href='#'>Seiver's Disease</a></li>
                                     <li><a href='#'>Sever's Disease</a></li>
                                 </ul>
-                            <li><a href='#'>Fungus Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Fungus Problems</a></li>
                                 <ul class='fungusOptions'>
                                     <li><a href='#'>Common Fungul Problems</a></li>
                                     <li><a href='#'>Athlete's Foot</a></li>
                                     <li><a href='#'>Fungal Nails</a></li>
                                 </ul>
-                            <li><a href='#'>Heel Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Heel Problems</a></li>
                                 <ul class='heelOptions'>
                                     <li><a href='#'>Haglund's Deformity</a></li>
                                     <li><a href='#'>Heel Callus</a></li>
                                     <li><a href='#'>Heel Fissures</a></li>
                                     <li><a href='#'>Plantar Faciitis (Heel Spur)</a></li>
                                 </ul>
-                            <li><a href='#'>Nail Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Nail Problems</a></li>
                                 <ul class='nailOptions'>
                                     <li><a href='#'>Black Toenails</a></li>
                                     <li><a href='#'>Ingrown Toenails</a></li>
                                     <li><a href='#'>Nail Fungus</a></li>
                                 </ul>
-                            <li><a href='#'>Skin Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Skin Problems</a></li>
                                 <ul class='skinOptions'>
                                     <li><a href='#'>Allergies</a></li>
                                     <li><a href='#'>Athletes Foot</a></li>
@@ -156,7 +160,7 @@
                                     <li><a href='#'>Ulcers</a></li>
                                     <li><a href='#'>Warts</a></li>
                                 </ul>
-                            <li><a href='#'>Toe Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Toe Problems</a></li>
                                 <ul class='toeOptions'>
                                     <li><a href='#'>Bunions</a></li>
                                     <li><a href='#'>Claw Toes</a></li>
@@ -170,7 +174,7 @@
                                     <li><a href='#'>Subungal Exotosis (Bone Spur Under Toenail)</a></li>
                                     <li><a href='#'>Turf Toe</a></li>
                                 </ul>
-                            <li><a href='#'>Vascular/ Nerve Problems</a></li>
+                            <li class='footProbOptions'><a href='#'>Vascular/ Nerve Problems</a></li>
                                 <ul class='vascularOptions'>
                                     <li><a href='#'>Acrocyanosis</a></li>
                                     <li><a href='#'>Alcoholic Neuropathy</a></li>
@@ -182,16 +186,16 @@
                                     <li><a href='#'>Venous Stasis</a></li>
                                 </ul>
                         </ul>
-                    <li><a href='#'>Medical Care</a></li>
-                        <ul class='careOptions option2'>
+                    <li class='libraryOptions'><a href='#'>Medical Care</a></li>
+                        <ul class='careOptions'>
                             <li><a href='#'>Diagnostic Procedures</a></li>
                             <li><a href='#'>Orthotics</a></li>
                             <li><a href='#'>Pain Management</a></li>
                             <li><a href='#'>Surgical Procedures</a></li>
                             <li><a href='#'>Therapies</a></li>
                         </ul>
-                    <li><a href='#'>Fitness And Your Feet</a></li>
-                        <ul class='fitnessOptions option2'>
+                    <li class='libraryOptions'><a href='#'>Fitness And Your Feet</a></li>
+                        <ul class='fitnessOptions'>
                             <li><a href='#'>General Information About Fitness And Your Feet</a></li>
                             <li><a href='#'>Excersize those Toes!</a></li>
                             <li><a href='#'>Aerobics</a></li>
@@ -201,8 +205,8 @@
                             <li><a href='#'>Walking And Your Feet</a></li>
                             <li><a href='#'>Work Footwear</a></li>
                         </ul>
-                    <li><a href='#'>Foot Care</a></li>
-                        <ul class='footCareOptions option2'>
+                    <li class='libraryOptions'><a href='#'>Foot Care</a></li>
+                        <ul class='footCareOptions'>
                             <li><a href='#'>Basic Foot Care Guidelines</a></li>
                             <li><a href='#'>Athletic Foot Care</a></li>
                             <li><a href='#'>Blisters</a></li>
@@ -223,8 +227,8 @@
                             <li><a href='#'>Nutrition For Your Feet</a></li>
                             <li><a href='#'>Smelly Feet/ Foot Odor</a></li>
                         </ul>
-                    <li><a href='#'>Shoes</a></li>
-                        <ul class='shoesOptions option2'>
+                    <li class='libraryOptions'><a href='#'>Shoes</a></li>
+                        <ul class='shoesOptions'>
                             <li><a href='#'>Anatomy Of A Shoe</a></li>
                             <li><a href='#'>Athletic Shoe Guidelines</a></li>
                             <li><a href='#'>Children's Shoes</a></li>
@@ -236,17 +240,14 @@
                             <li><a href='#'>Your Footprints</a></li>
                             <li><a href='#'>Wear Patterns</a></li>
                         </ul>
-                    <li><a href='#'>Links</a></li>
-                        <ul class='linkOptions option2'>
+                    <li class='libraryOptions'><a href='#'>Links</a></li>
+                        <ul class='linkOptions'>
                             <li><a href='#'>Government</a></li>
                             <li><a href='#'>Associations/ Groups</a></li>
                             <li><a href='#'>Online Resources</a></li>
                         </ul>
                 </ul>
-            <li><a href='#'>REQUEST APPOINTMENT</a></li>   
-        </ul>
     </div>
-    
     <!-- ////////////////////////////////////////////////////////////////////////////////////////////////////////////
     ////////////////////////////////////////////        END OF NAVBAR        ////////////////////////////////////////
     ///////////////////////////////////////////////////////////////////////////////////////////////////////////////-->
